# mc-link

./: .gitignore  CLAUDE.md  Cargo.toml
crates/mc-link-compat/: Cargo.toml
crates/mc-link-compat/src/: error.rs  jar.rs  lib.rs  prelude.rs  rules.rs
crates/mc-link-config/: Cargo.toml
crates/mc-link-config/src/: error.rs  lib.rs  macros.rs  manager.rs  prelude.rs  profiles.rs  servers.rs
crates/mc-link-connector/: Cargo.toml
crates/mc-link-connector/src/: lib.rs  prelude.rs
crates/mc-link-connector/src/connectors/: ftp.rs  local.rs  mod.rs
crates/mc-link-core/: Cargo.toml
crates/mc-link-core/src/: cache.rs  error.rs  lib.rs  logging.rs  prelude.rs  progress.rs  server.rs  traits.rs
crates/mc-link-manager/: Cargo.toml
crates/mc-link-manager/src/: actions.rs  error.rs  lib.rs  manager.rs  prelude.rs  scanning.rs  structure.rs
src/: cli.rs  main.rs  progress.rs
src/tui/: app.rs  events.rs  form.rs  mod.rs
src/tui/components/: add_server.rs  mod.rs
