[package]
name = "mc-link-config"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
directories = { workspace = true }
anyhow = { workspace = true }
derive_more = { workspace = true }
config = "0.15"
paste = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"