[package]
name = "mc-link-core"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
tosic-utils.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
chrono = { workspace = true }
mc-link-config = { path = "../mc-link-config" }
sha2 = "0.10"
tempfile = "3.20.0"
tokio = { workspace = true }
