[package]
name = "mc-link-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
mc-link-core = { path = "../mc-link-core" }
mc-link-compat = { path = "../mc-link-compat" }
mc-link-connector = { path = "../mc-link-connector" }
mc-link-config = { path = "../mc-link-config" }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing.workspace = true